build/apps/esphome/overlays/dev/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "4"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    #external-dns.alpha.kubernetes.io/target: infra.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: esphome
  name: esphome
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`esphome.anotherlife.pl`)
      # middlewares:
      #   - name: headers #traefik-dashboard-auth  #chain-traefik-dashboard
      #     namespace: traefik
      services:
        - kind: TraefikService
          name: esphome
          port: 6052
  tls:
    domains:
      - main: anotherlife.pl # dev.anotherlife.pl
        sans:
          - .anotherlife.pl # .dev.anotherlife.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-production
